--- a/package.json
+++ b/package.json
@@ -6,18 +6,25 @@
     "start": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
-    "web": "expo start --web"
+    "web": "expo start --web",
+    "lint": "eslint ."
   },
   "dependencies": {
+    "eslint-config-prettier": "^9.0.0",
     "expo": "~49.0.10",
     "expo-status-bar": "~1.6.0",
+    "firebase": "^10.3.1",
+    "prettier": "^3.0.3",
     "react": "18.2.0",
-    "react-native": "0.72.4"
+    "react-native": "0.72.4",
+    "react-native-camera": "^4.2.1",
+    "react-native-elements": "^3.4.3",
+    "react-native-sqlite-storage": "^6.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
-    "@types/react": "~18.2.14",
-    "typescript": "^5.1.3"
+    "eslint": "^8.49.0",
+    "eslint-config-universe": "^12.0.0"
   },
   "private": true
 }
