--- a/package.json
+++ b/package.json
@@ -1,25 +1,28 @@
 {
   "name": "qrvoyant",
   "version": "1.0.0",
-  "main": "node_modules/expo/AppEntry.js",
+  "main": "App.tsx",
   "scripts": {
     "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web",
     "lint": "eslint ."
   },
   "dependencies": {
+    "@react-native/metro-config": "^0.72.11",
     "eslint-config-prettier": "^9.0.0",
     "expo": "~49.0.10",
+    "expo-camera": "~13.4.4",
+    "expo-splash-screen": "~0.20.5",
+    "expo-sqlite": "~11.3.3",
     "expo-status-bar": "~1.6.0",
     "firebase": "^10.3.1",
     "prettier": "^3.0.3",
     "react": "18.2.0",
     "react-native": "0.72.4",
     "react-native-camera": "^4.2.1",
-    "react-native-elements": "^3.4.3",
-    "react-native-sqlite-storage": "^6.0.1"
+    "react-native-elements": "^3.4.3"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
