--- a/app.json
+++ b/app.json
@@ -11,9 +11,7 @@
       "resizeMode": "contain",
       "backgroundColor": "#ffffff"
     },
-    "assetBundlePatterns": [
-      "**/*"
-    ],
+    "assetBundlePatterns": ["**/*"],
     "ios": {
       "supportsTablet": true,
       "bundleIdentifier": "com.anonymous.QRvoyant"
@@ -35,6 +33,12 @@
     "plugins": [
       [
         "expo-camera",
+        {
+          "cameraPermission": "Allow QRvoyant to access your camera."
+        }
+      ],
+      [
+        "expo-barcode-scanner",
         {
           "cameraPermission": "Allow QRvoyant to access your camera."
         }
