--- a/package.json
+++ b/package.json
@@ -11,8 +11,11 @@
   },
   "dependencies": {
     "@react-native/metro-config": "^0.72.11",
+    "@react-navigation/native": "^6.1.8",
+    "@react-navigation/stack": "^6.3.18",
     "eslint-config-prettier": "^9.0.0",
     "expo": "~49.0.10",
+    "expo-barcode-scanner": "~12.5.3",
     "expo-camera": "~13.4.4",
     "expo-splash-screen": "~0.20.5",
     "expo-sqlite": "~11.3.3",
@@ -23,7 +26,8 @@
     "react-native": "0.72.5",
     "react-native-camera": "^4.2.1",
     "react-native-elements": "^3.4.3",
-    "expo-barcode-scanner": "~12.5.3"
+    "react-native-safe-area-context": "4.6.3",
+    "react-native-screens": "~3.22.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
