--- a/package.json
+++ b/package.json
@@ -10,14 +10,16 @@
     "lint": "eslint ."
   },
   "dependencies": {
-    "@clerk/clerk-expo": "^0.19.14",
+    "@clerk/clerk-expo": "^0.19.27",
     "@react-native/metro-config": "^0.72.11",
     "@react-navigation/native": "^6.1.8",
     "@react-navigation/stack": "^6.3.18",
+    "dotenv": "^16.3.1",
     "eslint-config-prettier": "^9.0.0",
     "expo": "~49.0.10",
     "expo-barcode-scanner": "~12.5.3",
     "expo-camera": "~13.4.4",
+    "expo-constants": "~14.4.2",
     "expo-splash-screen": "~0.20.5",
     "expo-sqlite": "~11.3.3",
     "expo-status-bar": "~1.6.0",
@@ -26,13 +28,14 @@
     "react": "18.2.0",
     "react-native": "0.72.6",
     "react-native-camera": "^4.2.1",
+    "react-native-dotenv": "^3.4.9",
     "react-native-elements": "^3.4.3",
     "react-native-safe-area-context": "4.6.3",
-    "react-native-screens": "~3.22.0",
-    "expo-constants": "~14.4.2"
+    "react-native-screens": "~3.22.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
+    "@types/react-native-dotenv": "^0.2.2",
     "eslint": "^8.49.0",
     "eslint-config-universe": "^12.0.0"
   },
